bug fixes to scrollbar and _app

--- a/src/styles/customStyles.css
+++ b/src/styles/customStyles.css
@@ -1,6 +1,12 @@
 body {
   height: 100vh;
   background-color: #121212;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
+body::-webkit-scrollbar {
+  display: none;
 }
 
 .lak {
